--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
 	<div class="header"></div>
 </head>
 <body>
+<div></div>
 	<div class="page1"></div>
 	<div class="page2"></div>
 	<div class="page3"></div>
