--- a/index.html
+++ b/index.html
@@ -39,15 +39,15 @@
                     </a>
                     <a class="brand" href="#">Project name</a>
                     <div class="nav-collapse collapse">
-                        <ul class="nav" id="top-nav">
+                        <ul class="nav pull-right" id="top-nav">
                             <li ><a href="#">Home</a></li>
-                            <li><a href="#section-1">About</a></li>
-                            <li><a href="#section-2">Contact</a></li>
-                            <li><a href="#section-3">Blog</a></li>
-                            <li><a href="#section-4">Portfolio</a></li>
+                            <li><a href="#section-1">Home</a></li>
+                            <li><a href="#section-2">Section 1</a></li>
+                            <li><a href="#section-3">Section 2</a></li>
+                            <li><a href="#section-4">Section 3</a></li>
                         </ul>
                         <form class="navbar-form pull-right">
-                            <a class="btn btn-success" href="#">Back To Untame!</a>
+                            <a class="btn btn-success" href="#">Back</a>
                         </form>
                     </div><!--/.nav-collapse -->
                 </div>
@@ -59,6 +59,7 @@
             <!-- Main hero unit for a primary marketing message or call to action -->
             <div class="hero-unit">
                 <h1>Hello, world!</h1>
+                <!-- add image files here  to populate carousel-->
                 <ul class="bxslider">
                   <li><img src="apple-touch-icon-114x114-precomposed.png" /></li>
                   <li><img src="apple-touch-icon-114x114-precomposed.png" /></li>
