--- a/index.html
+++ b/index.html
@@ -37,13 +37,15 @@
                    
                 </div>
                 <!-- this links to sections of scroller, Change secetion names here-->
-                <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
-                    <ul class="nav navbar-nav navbar-right col-xs-5" id="top-nav">
+                <div class="collapse navbar-collapse " id="bs-example-navbar-collapse-1">
+                    <div class="col-xs-1"></div>
+                    <ul class="nav navbar-nav navbar-right col-xs-*" id="top-nav">
                         <li ><a href="#home">Home</a></li>
                         <li><a href="#section-2">Section 1</a></li>
                         <li><a href="#section-3">Section 2</a></li>
                         <li><a href="#section-4">Section 3</a></li>
                     </ul>
+                    <div class="col-xs-1"></div>
                 </div><!-- /.navbar-collapse -->
             </div><!-- /.container-fluid -->
         </nav>
