trying to fix missing file error for bootstrap.min.css.map

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
         <meta name="viewport" content="width=device-width">
 
         <link rel="stylesheet" href="css/bootstrap.min.css">
-        <link rel="stylesheet" href="css/bootstrap-responsive.min.css">
+        <!-- <link rel="stylesheet" href="css/bootstrap-responsive.min.css"> -->
         <link href="css/jquery.bxslider.css" rel="stylesheet" />
         <link rel="stylesheet" href="css/main.css">
         
