--- a/index.html
+++ b/index.html
@@ -1,7 +1,9 @@
 <!-- 
 Sam Sadtler - 2016
 Source: https://github.com/samsadtler/boiler-plate-scroller
-Demo: http://samsadtler.github.io/boiler-plate-scroller/    
+Demo: http://samsadtler.github.io/boiler-plate-scroller/   
+
+sample images copyright Sam Sadtler 2016 
  -->
 
 
@@ -143,12 +145,10 @@ Demo: http://samsadtler.github.io/boiler-plate-scroller/
 
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.8.3/jquery.min.js"></script>
         <script>window.jQuery || document.write('<script src="js/vendor/jquery-1.8.3.min.js"><\/script>')</script>
-
-        <!-- bxSlider CSS file -->
-        <script src="js/jquery-2.2.0.min.js"></script>
+        <script src="js/vendor/jquery-2.2.0.min.js"></script>
         <script src="js/vendor/bootstrap.min.js"></script>
-        <script src="js/jquery.bxslider.min.js"></script>
-        <script src="js/parallax.min.js"></script>
+        <script src="js/vendor/jquery.bxslider.min.js"></script>
+        <script src="js/vendor/parallax.min.js"></script>
         <!-- // <script src="js/vendor/modernizr-2.6.2-respond-1.1.0.min.js"></script> -->
         <script src="js/plugins.js"></script>
         <script src="js/main.js"></script>
