--- a/index.html
+++ b/index.html
@@ -88,7 +88,33 @@ sample images copyright Sam Sadtler 2016
                 </div>
                 <div class="col-xs-1"></div>
             </div> <!-- end block -->
-            
+             <div class="row">
+                <div class="col-xs-1"></div>
+                <div class="col-xs-3" id="section-4">
+                    <h2 >
+                        Slides with Text
+                    </h2>
+                    <!-- Paragraph to go with text slides, text is static -->
+                    <p>
+                        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec ac neque vulputate justo blandit rhoncus. Integer nec neque eros. Donec ut magna dui, ac adipiscing felis. In odio massa, porta ornare pulvinar volutpat, ullamcorper et metus. Proin neque metus, tincidunt at adipiscing id, mattis ut justo. Mauris varius justo ac libero ultrices tincidunt. Sed rutrum ultrices elit, non rhoncus libero aliquam et. Sed sollicitudin, odio ut gravida congue, leo enim vehicula diam, quis hendrerit velit mauris nec neque. Sed sagittis facilisis augue quis laoreet. Pellentesque fermentum augue vel elit faucibus tempor.
+
+                    </p>
+                    </div>
+                    
+                    <div class="col-xs-7">
+                        <!-- Second Set of slides goes here -->
+                        <!-- add or remove <li> elements from more or less images -->
+                        <ul class=" bxslider ">
+                          <li><img src="img/IMG_7783.jpg" /></li>
+                          <li><img src="img/IMG_6974.jpg" /></li>
+                          <li><img src="img/IMG_7317.jpg" /></li>
+                          <li><img src="img/IMG_6131.jpg" /></li>
+                        </ul>
+                    </div>
+                <div class="col-xs-1"></div>
+            </div>
+
+
             <div class="block row" id="section-3">
                 <div class="col-xs-1"></div>
                 <div class="col-xs-10">
@@ -108,6 +134,13 @@ sample images copyright Sam Sadtler 2016
                 <div class="col-xs-1"></div>
  
             </div> <!-- end block -->
+
+            <!-- Full image -->
+            <div class="row">
+                <div class="col-xs-12">
+                    <img class="full-image" src="img/IMG_6131.jpg" />
+                </div>     
+            </div>
             <!-- Add Slides with Text here -->
             <div class="row">
                 <div class="col-xs-1"></div>
@@ -134,6 +167,8 @@ sample images copyright Sam Sadtler 2016
                     </div>
                 <div class="col-xs-1"></div>
             </div>
+
+
             <footer>
             <div class="col-xs-1"></div>
             <div class="col-xs-3">
