fixing margins and shit

--- a/index.html
+++ b/index.html
@@ -174,10 +174,10 @@ sample images copyright Sam Sadtler 2016
                 <div class="col-xs-1"></div>
             </div>
             
-            <div class="row">
-                <div class="col-xs-5 col-xs-offset-4" id="section-6">
+            <div class="row row-height">
+                <div class=" pos col-xs-5 col-xs-offset-4" id="section-6">
                     <!-- final page -->
-                    <h2>
+                    <h2 >
                         Thanks For Watching
                     </h2>
                         
