hiding extra css and added single page effects

--- a/index.html
+++ b/index.html
@@ -20,9 +20,10 @@ sample images copyright Sam Sadtler 2016
         <meta name="description" content="">
         <meta name="viewport" content="width=device-width">
 
-        <link rel="stylesheet" href="css/bootstrap.min.css">
+        <link rel="stylesheet" href="css/vendor/bootstrap.min.css">
         <!-- <link rel="stylesheet" href="css/bootstrap-responsive.min.css"> -->
-        <link href="css/jquery.bxslider.css" rel="stylesheet" />
+        <link href="css/vendor/jquery.bxslider.css" rel="stylesheet" />
+        <link rel="stylesheet" type="text/css" href="css/vendor/jquery.fullPage.css" />
         <link href='https://fonts.googleapis.com/css?family=Roboto' rel='stylesheet' type='text/css'>
         <link rel="stylesheet" href="css/main.css">
         
@@ -201,6 +202,15 @@ sample images copyright Sam Sadtler 2016
         <script src="js/vendor/bootstrap.min.js"></script>
         <script src="js/vendor/jquery.bxslider.min.js"></script>
         <script src="js/vendor/parallax.min.js"></script>
+        
+        <!-- This following line is optional. Only necessary if you use the option css3:false and you want to use other easing effects rather than "linear", "swing" or "easeInOutCubic". -->
+        <script src="vendors/jquery.easings.min.js"></script>
+
+
+        <!-- This following line is only necessary in the case of using the plugin option `scrollOverflow:true` -->
+        <script type="text/javascript" src="vendors/jquery.slimscroll.min.js"></script>
+
+        <script type="text/javascript" src="jquery.fullPage.js"></script>
         <!-- // <script src="js/vendor/modernizr-2.6.2-respond-1.1.0.min.js"></script> -->
         <script src="js/plugins.js"></script>
         <script src="js/main.js"></script>
