--- a/index.html
+++ b/index.html
@@ -70,7 +70,8 @@ sample images copyright Sam Sadtler 2016
         <div class="parallax-window col section" data-parallax="scroll" data-image-src="img/IMG_6131.jpg" id="home"></div>
             <div class="center-text" data-parallax="scroll">
                 <div><h1 class"h1">Welcome To The Project</h1>
-                     <h4 class="h4">Some Kind of Tagline Goes Here</h4>   
+                    <div class="sm-spacer"></div>
+                    <h4 class="h4">Some Kind of Tagline Goes Here</h4>   
                 </div>
             </div>
             <div class="row" id="section-1">
@@ -79,7 +80,9 @@ sample images copyright Sam Sadtler 2016
             <div class="block row" >
                 <div class="col-xs-1"></div>
                 <div class="col-xs-10">
+                    <div class="spacer"></div>
                     <h2>Title for This Screen</h2> 
+                    <div class="spacer"></div>
                 </div>
                 <div class="col-xs-1"></div>   
             </div>
@@ -134,13 +137,12 @@ sample images copyright Sam Sadtler 2016
             <div class="block row section">
                 <div class="col-xs-1"></div>
                 <div class="col-xs-10">
-
-                    <h2 >
-                        Slides
-                    </h2>
+                    <div class="spacer"></div>
+                    <h2> Title for this screen </h2>
+                    <div class="spacer"></div>
                     <!-- first Set of slides goes here -->
                     <!-- add or remove <li> elements from more or less images -->
-                    <ul class=" bxslider">                   
+                    <ul class=" bxslider slides-only">                   
                         <li><img src="img/IMG_6974.jpg" /></li>
                         <li><img src="img/IMG_7317.jpg" /></li>
                         <li><img src="img/IMG_7783.jpg" /></li>
@@ -158,7 +160,6 @@ sample images copyright Sam Sadtler 2016
             <div class="row section">
 
                 <div class="col-xs-12">
-                    <h2> Title for this screen </h2>
                     <img class="img-responsive" src="img/IMG_6131.jpg" alt="Responsive image"/>
                 </div>     
             </div>
@@ -172,6 +173,7 @@ sample images copyright Sam Sadtler 2016
                     <h2 >
                         Slides with Text
                     </h2>
+                    <div class="spacer"></div>
                     <!-- Paragraph to go with text slides, text is static -->
                     <p class="s-w-t">
                         Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec ac neque vulputate justo blandit rhoncus. Integer nec neque eros. Donec ut magna dui, ac adipiscing felis. In odio massa, porta ornare pulvinar volutpat, ullamcorper et metus. Proin neque metus, tincidunt at adipiscing id, mattis ut justo. Mauris varius justo ac libero ultrices tincidunt. Sed rutrum ultrices elit, non rhoncus libero aliquam et. Sed sollicitudin, odio ut gravida congue, leo enim vehicula diam, quis hendrerit velit mauris nec neque. Sed sagittis facilisis augue quis laoreet. Pellentesque fermentum augue vel elit faucibus tempor.
@@ -196,10 +198,10 @@ sample images copyright Sam Sadtler 2016
                 <div class="block col-xs-*"></div>
             </div>
             <div class="row row-height section">
-                <div class=" pos col-xs-5 col-xs-offset-4">
+                <div class=" pos col-xs-3 col-xs-offset-6">
                     <!-- final page -->
-                    <h2 >
-                        Thanks For Watching
+                    <h2 class="h2">
+                        Thanks!
                     </h2>
                         
                 </div>
