--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@ sample images copyright Sam Sadtler 2016
                         <span class="icon-bar"></span>
                         <span class="icon-bar"></span>
                     </button>
-                   
+                   <a class="navbar-brand" href="#">Some Text Here</a>
                 </div>
                 
                 <div class="collapse navbar-collapse " id="bs-example-navbar-collapse-1">
