--- a/index.html
+++ b/index.html
@@ -47,7 +47,9 @@ sample images copyright Sam Sadtler 2016
                         <span class="icon-bar"></span>
                         <span class="icon-bar"></span>
                     </button>
-                   <a class="navbar-brand" href="#">Some Text Here</a>
+
+                    <!-- this changes the navbar text on the left -->
+                   <a class="navbar-brand" href="#">Some Text Here </a>
                 </div>
                 
                 <div class="collapse navbar-collapse " id="bs-example-navbar-collapse-1">
@@ -197,7 +199,7 @@ sample images copyright Sam Sadtler 2016
              <div class="row" id="section-6">
                 <div class="block col-xs-*"></div>
             </div>
-            <div class="row row-height section">
+            <div class="row row-height section end">
                 <div class=" pos col-xs-3 col-xs-offset-6">
                     <!-- final page -->
                     <h2 class="h2">
