fixed header and footer text colors

--- a/index.html
+++ b/index.html
@@ -197,6 +197,7 @@ sample images copyright Sam Sadtler 2016
                     </div>
                 <div class="col-xs-1"></div>
             </div>
+            <div class="spacer-div"></div>
              <div class="row" id="section-6">
                 <div class="block col-xs-*"></div>
             </div>
