--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@ sample images copyright Sam Sadtler 2016
         <nav class="navbar navbar-inverse navbar-fixed-top">   
         <!-- Brand and toggle get grouped for better mobile display -->
                 <div class="navbar-header">
-                    <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1" aria-expanded="false">
+                   <!--  <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1" aria-expanded="false">
                         <span class="sr-only">Toggle navigation</span>
                         <span class="icon-bar"></span>
                         <span class="icon-bar"></span>
@@ -46,21 +46,21 @@ sample images copyright Sam Sadtler 2016
                         <span class="icon-bar"></span>
                         <span class="icon-bar"></span>
                         <span class="icon-bar"></span>
-                    </button>
+                    </button> -->
 
                     <!-- this changes the navbar text on the left -->
-                   <a class="navbar-brand" href="#">Some Text Here </a>
+                   <a class="navbar-brand" href="#">    Some Text Here </a>
                 </div>
                 
                 <div class="collapse navbar-collapse " id="bs-example-navbar-collapse-1">
                     <!-- this links to sections of scroller, Change section names here-->
                     <ul class="nav navbar-nav navbar-right col-xs-*" id="top-nav">
-                        <li ><a href="#home">Home</a></li>
+                   <!--      <li ><a href="#home">Home</a></li>
                         <li><a href="#section-1">Section 1</a></li>
                         <li><a href="#section-2">Section 2</a></li>
                         <li><a href="#section-3">Section 3</a></li>
                         <li><a href="#section-4">Section 4</a></li>
-                        <li><a href="#section-5">Section 5</a></li>
+                        <li><a href="#section-5">Section 5</a></li> -->
                         <li class="col-xs-1"></li>
                     </ul>
                     <div class="col-xs-1"></div>
@@ -71,9 +71,9 @@ sample images copyright Sam Sadtler 2016
     <div class="container-fluid" id="fullpage">
         <div class="parallax-window col section" data-parallax="scroll" data-image-src="img/IMG_6131.jpg" id="home"></div>
             <div class="center-text" data-parallax="scroll">
-                <div><h1 class"h1">Welcome To The Project</h1>
+                <div><div class="h1"> Welcome To The Project </div> 
                     <div class="sm-spacer"></div>
-                    <h4 class="h4">Some Kind of Tagline Goes Here</h4>   
+                    <div class="h4"> Some Kind of Tagline Goes Here </div>
                 </div>
             </div>
             <div class="row" id="section-1">
