--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@ sample images copyright Sam Sadtler 2016
                 <div class="col-xs-10">
                     <div class="spacer"></div>
                     <h2>Title for This Screen</h2> 
-                    <div class="spacer"></div>
+                    <!-- <div class="spacer"></div> -->
                 </div>
                 <div class="col-xs-1"></div>   
             </div>
