--- a/index.html
+++ b/index.html
@@ -109,9 +109,11 @@ sample images copyright Sam Sadtler 2016
                 <div class="col-xs-1"></div>
                 <div class="col-xs-3">
                
-                    <h2 >
+                    <div class="h2-custom">
                         Slides with Text
-                    </h2>
+                    </div>
+                    <div class="sm-spacer"></div>
+                    <div class="sm-spacer"></div>
                     <!-- Paragraph to go with text slides, text is static -->
 
                     <p class="s-w-t">
