fixed thanks spacing

--- a/index.html
+++ b/index.html
@@ -71,7 +71,8 @@ sample images copyright Sam Sadtler 2016
     <div class="container-fluid" id="fullpage">
         <div class="parallax-window col section" data-parallax="scroll" data-image-src="img/IMG_6131.jpg" id="home"></div>
             <div class="center-text" data-parallax="scroll">
-                <div><div class="h1"> Welcome To The Project </div> 
+                <div>
+                    <div class="h1"> Welcome To The Project </div> 
                     <div class="sm-spacer"></div>
                     <div class="h4"> Some Kind of Tagline Goes Here </div>
                 </div>
@@ -209,7 +210,7 @@ sample images copyright Sam Sadtler 2016
                 <div class="block col-xs-*"></div>
             </div>
             <div class="row row-height section end">
-                <div class=" pos col-xs-3 col-xs-offset-6">
+                <div class="pos col-xs-3 col-xs-offset-5">
                     <!-- final page -->
                     <h2 class="h2">
                         Thanks!
