fixed large carousel title spacing

--- a/index.html
+++ b/index.html
@@ -146,6 +146,7 @@ sample images copyright Sam Sadtler 2016
                     <div class="spacer"></div>
                     <h2> Title for this screen </h2>
                     <div class="spacer"></div>
+                    <div class="sm-spacer"></div>
                     <!-- first Set of slides goes here -->
                     <!-- add or remove <li> elements from more or less images -->
                     <ul class=" bxslider slides-only">                   
