added a few more px to the last page and added a back to the top link

--- a/index.html
+++ b/index.html
@@ -224,8 +224,9 @@ sample images copyright Sam Sadtler 2016
     </div> <!-- /container -->
     <footer>
     <div class="container-fluid footer">
-            <div class="col-xs-1"></div>
+            <div class="col-xs-9"></div>
             <div class="col-xs-3">
+                <p> <a class="footer-bar" href="#"> Back To The Top </a></p>
             </div>
         </div>
     </footer>
