--- a/index.html
+++ b/index.html
@@ -223,6 +223,8 @@ sample images copyright Sam Sadtler 2016
 
     </div> <!-- /container -->
     <footer>
+
+    <!-- BACK TO TOP SECTION IS RIGHT HERE -->
     <div class="container-fluid footer">
             <div class="col-xs-9"></div>
             <div class="col-xs-3">
